gave a name to the section and gave an alt to profile picture

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       right: -15rem;
     }
 
-    section {
+    .main {
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -146,10 +146,10 @@
 <body>
   <img class="circle circleTop" src="./images/bg-pattern-top.svg" alt="">
   <img class="circle circleBottom" src="./images/bg-pattern-bottom.svg" alt="">
-  <section>
+  <section class="main">
     <div class="card">
       <div class="cardBg"></div>
-      <img class="cardProfile" src="./images/image-victor.jpg" alt="">
+      <img class="cardProfile" src="./images/image-victor.jpg" alt="Victors profile picture">
       <div class="details">
         <p class="personal"><span class="name">Victor Crest</span>
           26</p>
