--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 <body>
   <img class="circle circleTop" src="./images/bg-pattern-top.svg" alt="">
   <img class="circle circleBottom" src="./images/bg-pattern-bottom.svg" alt="">
-  <section class="main">
+  <div class="main">
     <div class="card">
       <div class="cardBg"></div>
       <img class="cardProfile" src="./images/image-victor.jpg" alt="Victors profile picture">
@@ -171,7 +171,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://www.allanvoice.com">Allan Voice</a>.</div>
